# memo

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/: dependabot.yaml
.github/workflows/: check.yaml  ci.yaml
src/: state.ts
src-tauri/: Cargo.toml  decks.json  tauri.conf.json  temp.anki2
src-tauri/src/: card.rs  deck.rs  lib.rs
src/components/: Bar.svelte  Card.svelte  Cards.svelte  Content.svelte  RelativeTime.svelte
src/lib/: bindings.ts
src/routes/: +layout.ts  +page.svelte
src/styles/: global.scss  vars.scss
